# flavorcli

./: .gitbook.yaml  .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.MD  build.ps1  cliff.toml  flake.nix  install-linux.sh  install-win.ps1  pre-release-hook.ps1  release.toml  uninstall-linux.sh  uninstall-win.ps1
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
docs/: README.md  SUMMARY.md  add_to_path.md  getting_started.md  installation.md
docs/commands/auth/: README.md  delete.md  set.md
docs/commands/basics/: README.md
docs/commands/project/: README.md  create.md  get.md  list.md  update.md
docs/commands/project/devlog/: README.md  create.md  delete.md  get.md  list.md  update.md
docs/commands/store/: README.md  get.md  list.md
docs/commands/user/: README.md  get.md  list.md
src/: args.rs  main.rs
src/commands/: mod.rs
src/commands/auth/: delete.rs  mod.rs  set.rs
src/commands/project/: create.rs  get.rs  list.rs  mod.rs  update.rs
src/commands/project/devlog/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/commands/store/: get.rs  list.rs  mod.rs
src/commands/user/: get.rs  list.rs  mod.rs
src/helpers/: formatters.rs  get_key.rs  mod.rs  print_devlog.rs  print_devlog_table.rs  print_project.rs  print_project_table.rs  print_store.rs  print_store_table.rs  print_user.rs  print_user_table.rs  resolve_devlogs.rs  resolve_projects.rs
src/models/: authdata.rs  devlog.rs  devlog_vec.rs  mod.rs  project.rs  project_vec.rs  store.rs  user.rs  user_vec.rs
